Fri Jan  4 12:44:34 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* libdb/db_btree.c (dbstore): Rename basename argument to base to
	  avoid clashing with the function of the same name.
	* libdb/db_storage.h (dbstore): Update prototype.
	* libdb/mydbm.h (dbver_wr, dbver_rd), src/security.h
	  (do_system_drop_privs): Update prototype argument names to match
	  definition.

Fri Jan  4 11:52:22 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/man.c: Make prompt_string const. Avoids "discards qualifier"
	  warning when building without NLS.

Thu Jan  3 21:39:27 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import the lib-ignore module, to have the linker ignore
	  unused libraries.

Wed Jan  2 23:30:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/decompress.c (decompress_zlib), lib/linelength.c
	  (get_line_length), lib/pipeline.c (passthrough), src/lexgrog.l
	  (find_name), src/man.c (set_term, get_term, main,
	  make_roff_command, format_display_and_save, format_display,
	  display_catman, display), src/manconv.c (main), src/zsoelim.l
	  (open_file): Use STDIN_FILENO, STDOUT_FILENO, and STDERR_FILENO
	  macros rather than calling fileno.

Wed Jan  2 16:46:46 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
	  (main), src/lexgrog_test.c (main), src/man.c (main), src/manconv.c
	  (main), src/mandb.c (main), src/manpath.c (main), src/whatis.c
	  (main), src/wrapper.c (main), src/zsoelim.l (main): Bind the
	  "man-db-gnulib" textual domain as well as "man-db".

Wed Jan  2 00:12:48 GMT 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: New from Translation Project.
	* po/LINGUAS: Add nl.
	* man/THANKS: Add translator credit.

Tue Jan  1 15:36:23 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* README, src/man.c: Update copyright years.

Tue Jan  1 15:27:51 GMT 2008  Ming Hua  <minghua-guest@users.alioth.debian.org>

	* po/zh_CN.po: Update.
