@@ -1,3 +1,9 @@
+Fri Jan  4 15:59:41 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/Makefile.am: Install globbing and manconv in
+	  $(libexecdir)/@PACKAGE@ rather than in $(pkglibdir). Reported by
+	  Peter Breitenlohner.
+
 Fri Jan  4 12:44:34 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* libdb/db_btree.c (dbstore): Rename basename argument to base to
